# biggusratus

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHECKLIST.md  Dockerfile.client  Dockerfile.server  README.md  build-client.sh  docker-compose.yml  pyproject.toml
client/: client.py  core.py
client/commands/: __init__.py  base.py  download.py  hashdump.py  help.py  ipconfig.py  keylogger.py  record_audio.py  screenshot.py  search.py  shell.py  upload.py  webcam.py  webcam_stream.py
common/: constants.py  crypto.py  hmac.py  key_exchange.py  obfuscation.py  platform.py  protocol.py  tcp.py
scripts/: build-client.sh  build-server.sh  build_client.py  build_server.py
scripts/hooks/: hook-netifaces.py
server/: core.py  output.py  path_security.py  server.py  session.py  web.py
server/web/: index.css  package.json
server/web/static/: app.js  index.css  site.webmanifest
server/web/templates/: index.html
tests/: test_cli.py  test_crypto.py  test_download_command.py  test_hashdump_command.py  test_help_command.py  test_hmac.py  test_integration.py  test_ipconfig_command.py  test_keylogger_command.py  test_path_security.py  test_platform.py  test_platform_commands.py  test_reconnection.py  test_record_audio_command.py  test_screenshot_command.py  test_search_command.py  test_security.py  test_shell_command.py  test_tcp.py  test_upload_command.py  test_webcam_command.py  test_webcam_stream_command.py
