[tool.poetry]
name = "biggusratus"
version = "0.1.0"

packages = [
    { include = "server" },
    { include = "client" },
    { include = "common" },
]

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^44.0"
netifaces = "^0.11"
mss = "^10.1.0"
pillow = "^12.1.1"

[tool.poetry.scripts]
server = "server.server:main"
client = "client.client:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pre-commit = "^3.0"
black = "^24.0"
ruff = "^0.3.0"